Add devel php for local

--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -12,6 +12,7 @@ storage: folder
 folder: ../config/local
 module:
   devel: 0
+  devel_php: 0
 theme: {  }
 complete_list: {  }
 partial_list: {  }
