--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-composer-scaffold": "^11",
         "drupal/core-project-message": "^11",
         "drupal/core-recommended": "^11",
+        "drupal/devel_php": "^1.7",
         "drush/drush": "^13.3"
     },
     "require-dev": {
