--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -41,6 +41,7 @@ module:
   paragraphs_library: 0
   path: 0
   path_alias: 0
+  perec_builder: 0
   responsive_image: 0
   search: 0
   shortcut: 0
