--- a/web/modules/custom/perec_chessboard/perec_chessboard.info.yml
+++ b/web/modules/custom/perec_chessboard/perec_chessboard.info.yml
@@ -3,3 +3,6 @@ type: module
 description: 'Creates a chessboard widget, field type, and field formatter'
 package: 'custom'
 core_version_requirement: ^10 || ^11
+dependencies:
+  - drupal:field
+  - drupal:theme
