--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,12 +10,15 @@ module:
   ckeditor5: 0
   comment: 0
   config: 0
+  config_split: 0
   contact: 0
   contextual: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  entity_reference_revisions: 0
+  entity_usage: 0
   field: 0
   field_ui: 0
   file: 0
@@ -30,8 +33,10 @@ module:
   node: 0
   options: 0
   page_cache: 0
+  paragraphs_library: 0
   path: 0
   path_alias: 0
+  perec_builder: 0
   search: 0
   shortcut: 0
   system: 0
@@ -42,6 +47,7 @@ module:
   user: 0
   views_ui: 0
   views: 10
+  paragraphs: 11
   standard: 1000
 theme:
   olivero: 0
